add make_names_unique to tree

--- a/projects/miquel_tech_upsale_may.ipynb
+++ b/projects/miquel_tech_upsale_may.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:10.871138Z",
-     "end_time": "2023-05-21T17:53:10.918839Z"
+     "start_time": "2023-05-21T23:47:05.404948Z",
+     "end_time": "2023-05-21T23:47:05.435041Z"
     }
    },
    "outputs": [
@@ -15,7 +15,7 @@
      "data": {
       "text/plain": "(True, True)"
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
@@ -59,14 +59,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:12.144992Z",
-     "end_time": "2023-05-21T17:53:12.177100Z"
+     "start_time": "2023-05-21T23:47:05.926789Z",
+     "end_time": "2023-05-21T23:47:05.958038Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "# ok. lets match tech-name : Dendrogram name to \"Child\" (in dendo_rows)\n",
@@ -77,20 +77,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:12.854575Z",
-     "end_time": "2023-05-21T17:53:12.868158Z"
+     "start_time": "2023-05-21T23:47:06.590665Z",
+     "end_time": "2023-05-21T23:47:06.620543Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
       "text/plain": "set()"
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,14 +102,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:13.277104Z",
-     "end_time": "2023-05-21T17:53:13.305955Z"
+     "start_time": "2023-05-21T23:47:07.147160Z",
+     "end_time": "2023-05-21T23:47:07.174668Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
@@ -127,14 +127,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:13.760100Z",
-     "end_time": "2023-05-21T17:53:13.772118Z"
+     "start_time": "2023-05-21T23:47:07.987722Z",
+     "end_time": "2023-05-21T23:47:08.016726Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "from enbios2.experiment.sum_hierarchy import HierarchyNode\n",
@@ -165,14 +165,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:14.145911Z",
-     "end_time": "2023-05-21T17:53:14.169517Z"
+     "start_time": "2023-05-21T23:47:08.678378Z",
+     "end_time": "2023-05-21T23:47:08.813468Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "# ok, so far so good.\n",
@@ -183,41 +183,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:14.798887Z",
-     "end_time": "2023-05-21T17:53:14.811206Z"
+     "start_time": "2023-05-21T23:47:09.620335Z",
+     "end_time": "2023-05-21T23:47:09.681806Z"
     }
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "ok this was just a test if the basic tree can be build. now lets build a mega tree.\nthe root is called \"impacts\", which has 18 children, one for each indicator and each indicator has 2 children: onsite and offsite.\neach of these 2 subtrees has some subtree of the kind we build before\n"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "%%markdown\n",
     "ok this was just a test if the basic tree can be build. now lets build a mega tree.\n",
     "the root is called \"impacts\", which has 18 children, one for each indicator and each indicator has 2 children: onsite and offsite.\n",
     "each of these 2 subtrees has some subtree of the kind we build before"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:15.534156Z",
-     "end_time": "2023-05-21T17:53:15.564605Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "# however, the generator table include technology names, which are actually not in the tree, but the mapping that \"dendrogram_generation_base.csv\" is giving.\n",
@@ -231,14 +215,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:16.312590Z",
-     "end_time": "2023-05-21T17:53:16.336566Z"
+     "start_time": "2023-05-21T23:47:11.238665Z",
+     "end_time": "2023-05-21T23:47:11.268022Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "generation_file = base_path / \"PNIEC_generation.csv\"\n",
@@ -271,20 +255,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:16.855895Z",
-     "end_time": "2023-05-21T17:53:16.945984Z"
+     "start_time": "2023-05-21T23:47:12.361769Z",
+     "end_time": "2023-05-21T23:47:12.444871Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "outputs": [
     {
      "data": {
       "text/plain": "['terrestrial acidification potential (TAP)',\n 'global warming potential (GWP1000)',\n 'freshwater ecotoxicity potential (FETP)',\n 'marine ecotoxicity potential (METP)',\n 'terrestrial ecotoxicity potential (TETP)',\n 'fossil fuel potential (FFP)',\n 'freshwater eutrophication potential (FEP)',\n 'marine eutrophication potential (MEP)',\n 'human toxicity potential (HTPc)',\n 'human toxicity potential (HTPnc)',\n 'ionising radiation potential (IRP)',\n 'agricultural land occupation (LOP)',\n 'surplus ore potential (SOP)',\n 'ozone depletion potential (ODPinfinite)',\n 'particulate matter formation potential (PMFP)',\n 'photochemical oxidant formation potential: humans (HOFP)',\n 'photochemical oxidant formation potential: ecosystems (EOFP)',\n 'water consumption potential (WCP)']"
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,20 +290,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:17.728342Z",
-     "end_time": "2023-05-21T17:53:17.805859Z"
+     "start_time": "2023-05-21T23:47:13.462507Z",
+     "end_time": "2023-05-21T23:47:13.561593Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "outputs": [
     {
      "data": {
       "text/plain": "{'impacts': {'name': 'impacts',\n  'children': {'terrestrial acidification potential (TAP)': {'name': 'terrestrial acidification potential (TAP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'global warming potential (GWP1000)': {'name': 'global warming potential (GWP1000)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'freshwater ecotoxicity potential (FETP)': {'name': 'freshwater ecotoxicity potential (FETP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'marine ecotoxicity potential (METP)': {'name': 'marine ecotoxicity potential (METP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'terrestrial ecotoxicity potential (TETP)': {'name': 'terrestrial ecotoxicity potential (TETP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'fossil fuel potential (FFP)': {'name': 'fossil fuel potential (FFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'freshwater eutrophication potential (FEP)': {'name': 'freshwater eutrophication potential (FEP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'marine eutrophication potential (MEP)': {'name': 'marine eutrophication potential (MEP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'human toxicity potential (HTPc)': {'name': 'human toxicity potential (HTPc)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'human toxicity potential (HTPnc)': {'name': 'human toxicity potential (HTPnc)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'ionising radiation potential (IRP)': {'name': 'ionising radiation potential (IRP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'agricultural land occupation (LOP)': {'name': 'agricultural land occupation (LOP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'surplus ore potential (SOP)': {'name': 'surplus ore potential (SOP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'ozone depletion potential (ODPinfinite)': {'name': 'ozone depletion potential (ODPinfinite)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'particulate matter formation potential (PMFP)': {'name': 'particulate matter formation potential (PMFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'photochemical oxidant formation potential: humans (HOFP)': {'name': 'photochemical oxidant formation potential: humans (HOFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'photochemical oxidant formation potential: ecosystems (EOFP)': {'name': 'photochemical oxidant formation potential: ecosystems (EOFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'water consumption potential (WCP)': {'name': 'water consumption potential (WCP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None}},\n  'value': None}}"
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,14 +325,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:19.029261Z",
-     "end_time": "2023-05-21T17:53:19.116888Z"
+     "start_time": "2023-05-21T23:47:14.262711Z",
+     "end_time": "2023-05-21T23:47:14.311708Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -362,35 +346,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:22.503158Z",
-     "end_time": "2023-05-21T17:53:22.546592Z"
+     "start_time": "2023-05-21T23:47:15.694212Z",
+     "end_time": "2023-05-21T23:47:15.751953Z"
     }
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# lets do some introspection..."
+    "lets do some introspection..."
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:23.530664Z",
-     "end_time": "2023-05-21T17:53:23.550299Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "outputs": [
     {
      "data": {
       "text/plain": "[impacts - 18 children ]"
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,20 +379,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:23.864015Z",
-     "end_time": "2023-05-21T17:53:23.887759Z"
+     "start_time": "2023-05-21T23:47:17.107961Z",
+     "end_time": "2023-05-21T23:47:17.148498Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "outputs": [
     {
      "data": {
-      "text/plain": "([terrestrial acidification potential (TAP) - 2 children ],\n [[Onsite - 2 children ], [Offsite - 2 children ]])"
+      "text/plain": "([terrestrial acidification potential (TAP) - 2 children (impacts)],\n [[Onsite - 2 children (terrestrial acidification potential (TAP))],\n  [Offsite - 2 children (terrestrial acidification potential (TAP))]])"
      },
-     "execution_count": 26,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,20 +404,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:25.117779Z",
-     "end_time": "2023-05-21T17:53:25.131379Z"
+     "start_time": "2023-05-21T23:47:18.077067Z",
+     "end_time": "2023-05-21T23:47:18.135624Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "outputs": [
     {
      "data": {
-      "text/plain": "([Onsite - 2 children ], ['renewables', 'non-renewables'])"
+      "text/plain": "([Onsite - 2 children (terrestrial acidification potential (TAP))],\n ['renewables', 'non-renewables'])"
      },
-     "execution_count": 27,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,14 +429,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:53:36.933381Z",
-     "end_time": "2023-05-21T17:53:36.953876Z"
+     "start_time": "2023-05-21T23:47:18.934927Z",
+     "end_time": "2023-05-21T23:47:18.979996Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "# now we fill up all indicator sub-trees going row by row. finding the respective technology node for onsite and offsite and filling in the value\n",
@@ -486,14 +464,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:55:36.735076Z",
-     "end_time": "2023-05-21T17:55:36.820675Z"
+     "start_time": "2023-05-21T23:47:20.724231Z",
+     "end_time": "2023-05-21T23:47:20.821787Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "for indicator_subtree in root.children:\n",
@@ -502,14 +480,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:55:45.924867Z",
-     "end_time": "2023-05-21T17:55:45.945098Z"
+     "start_time": "2023-05-21T23:47:21.588946Z",
+     "end_time": "2023-05-21T23:47:21.617315Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "import json\n",
@@ -518,14 +496,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:55:47.941252Z",
-     "end_time": "2023-05-21T17:55:47.995688Z"
+     "start_time": "2023-05-21T23:47:22.202478Z",
+     "end_time": "2023-05-21T23:47:22.258886Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "root.to_csv((base_path / \"complete.csv\"))"
@@ -533,8 +511,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T17:58:58.375058Z",
-     "end_time": "2023-05-21T17:58:58.438685Z"
+     "start_time": "2023-05-21T23:47:23.098415Z",
+     "end_time": "2023-05-21T23:47:23.148264Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [],
+   "source": [
+    "# one sanky csv file per indicator.\n",
+    "# ! these hierarchies do not have unique names (same subtree in Onsite/Offsite), so we need to make them unique before we can write them to csv\n",
+    "(base_path / \"sanky\").mkdir(exist_ok=True)\n",
+    "for indicator_subtree in root.children:\n",
+    "    indicator_subtree.make_names_unique()\n",
+    "    indicator_subtree.to_sanky_tree(base_path / \"sanky\" / f\"{indicator_subtree.name}_sanky.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-21T23:50:16.761675Z",
+     "end_time": "2023-05-21T23:50:16.941888Z"
     }
    }
   },
