safe and simple filenames

--- a/projects/miquel_tech_upsale_may.ipynb
+++ b/projects/miquel_tech_upsale_may.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:05.404948Z",
-     "end_time": "2023-05-21T23:47:05.435041Z"
+     "start_time": "2023-05-22T00:12:45.582030Z",
+     "end_time": "2023-05-22T00:12:45.645043Z"
     }
    },
    "outputs": [
@@ -15,7 +15,15 @@
      "data": {
       "text/plain": "(True, True)"
      },
-     "execution_count": 47,
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": "(True, True)"
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -59,14 +67,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:05.926789Z",
-     "end_time": "2023-05-21T23:47:05.958038Z"
+     "start_time": "2023-05-22T00:12:45.514197Z",
+     "end_time": "2023-05-22T00:12:45.647233Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# ok. lets match tech-name : Dendrogram name to \"Child\" (in dendo_rows)\n",
@@ -77,20 +85,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:06.590665Z",
-     "end_time": "2023-05-21T23:47:06.620543Z"
+     "start_time": "2023-05-22T00:12:45.529191Z",
+     "end_time": "2023-05-22T00:12:45.647815Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "set()"
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,24 +110,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:07.147160Z",
-     "end_time": "2023-05-21T23:47:07.174668Z"
+     "start_time": "2023-05-22T00:12:45.542484Z",
+     "end_time": "2023-05-22T00:12:45.649745Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -127,14 +126,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:07.987722Z",
-     "end_time": "2023-05-21T23:47:08.016726Z"
+     "start_time": "2023-05-22T00:12:45.585620Z",
+     "end_time": "2023-05-22T00:12:45.651375Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from enbios2.experiment.sum_hierarchy import HierarchyNode\n",
@@ -165,14 +164,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:08.678378Z",
-     "end_time": "2023-05-21T23:47:08.813468Z"
+     "start_time": "2023-05-22T00:12:45.629311Z",
+     "end_time": "2023-05-22T00:12:45.849910Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# ok, so far so good.\n",
@@ -183,8 +182,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:09.620335Z",
-     "end_time": "2023-05-21T23:47:09.681806Z"
+     "start_time": "2023-05-22T00:12:45.629667Z",
+     "end_time": "2023-05-22T00:12:45.850712Z"
     }
    }
   },
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# however, the generator table include technology names, which are actually not in the tree, but the mapping that \"dendrogram_generation_base.csv\" is giving.\n",
@@ -215,14 +214,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:11.238665Z",
-     "end_time": "2023-05-21T23:47:11.268022Z"
+     "start_time": "2023-05-22T00:12:45.649935Z",
+     "end_time": "2023-05-22T00:12:45.851669Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "generation_file = base_path / \"PNIEC_generation.csv\"\n",
@@ -255,20 +254,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:12.361769Z",
-     "end_time": "2023-05-21T23:47:12.444871Z"
+     "start_time": "2023-05-22T00:12:45.676643Z",
+     "end_time": "2023-05-22T00:12:45.930118Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "['terrestrial acidification potential (TAP)',\n 'global warming potential (GWP1000)',\n 'freshwater ecotoxicity potential (FETP)',\n 'marine ecotoxicity potential (METP)',\n 'terrestrial ecotoxicity potential (TETP)',\n 'fossil fuel potential (FFP)',\n 'freshwater eutrophication potential (FEP)',\n 'marine eutrophication potential (MEP)',\n 'human toxicity potential (HTPc)',\n 'human toxicity potential (HTPnc)',\n 'ionising radiation potential (IRP)',\n 'agricultural land occupation (LOP)',\n 'surplus ore potential (SOP)',\n 'ozone depletion potential (ODPinfinite)',\n 'particulate matter formation potential (PMFP)',\n 'photochemical oxidant formation potential: humans (HOFP)',\n 'photochemical oxidant formation potential: ecosystems (EOFP)',\n 'water consumption potential (WCP)']"
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,20 +289,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:13.462507Z",
-     "end_time": "2023-05-21T23:47:13.561593Z"
+     "start_time": "2023-05-22T00:12:45.724196Z",
+     "end_time": "2023-05-22T00:12:45.932814Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "{'impacts': {'name': 'impacts',\n  'children': {'terrestrial acidification potential (TAP)': {'name': 'terrestrial acidification potential (TAP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'global warming potential (GWP1000)': {'name': 'global warming potential (GWP1000)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'freshwater ecotoxicity potential (FETP)': {'name': 'freshwater ecotoxicity potential (FETP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'marine ecotoxicity potential (METP)': {'name': 'marine ecotoxicity potential (METP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'terrestrial ecotoxicity potential (TETP)': {'name': 'terrestrial ecotoxicity potential (TETP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'fossil fuel potential (FFP)': {'name': 'fossil fuel potential (FFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'freshwater eutrophication potential (FEP)': {'name': 'freshwater eutrophication potential (FEP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'marine eutrophication potential (MEP)': {'name': 'marine eutrophication potential (MEP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'human toxicity potential (HTPc)': {'name': 'human toxicity potential (HTPc)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'human toxicity potential (HTPnc)': {'name': 'human toxicity potential (HTPnc)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'ionising radiation potential (IRP)': {'name': 'ionising radiation potential (IRP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'agricultural land occupation (LOP)': {'name': 'agricultural land occupation (LOP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'surplus ore potential (SOP)': {'name': 'surplus ore potential (SOP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'ozone depletion potential (ODPinfinite)': {'name': 'ozone depletion potential (ODPinfinite)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'particulate matter formation potential (PMFP)': {'name': 'particulate matter formation potential (PMFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'photochemical oxidant formation potential: humans (HOFP)': {'name': 'photochemical oxidant formation potential: humans (HOFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'photochemical oxidant formation potential: ecosystems (EOFP)': {'name': 'photochemical oxidant formation potential: ecosystems (EOFP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None},\n   'water consumption potential (WCP)': {'name': 'water consumption potential (WCP)',\n    'children': {'Onsite': {'name': 'Onsite', 'children': {}, 'value': None},\n     'Offsite': {'name': 'Offsite', 'children': {}, 'value': None}},\n    'value': None}},\n  'value': None}}"
      },
-     "execution_count": 57,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,14 +324,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:14.262711Z",
-     "end_time": "2023-05-21T23:47:14.311708Z"
+     "start_time": "2023-05-22T00:12:45.748779Z",
+     "end_time": "2023-05-22T00:12:45.992638Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -346,8 +345,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:15.694212Z",
-     "end_time": "2023-05-21T23:47:15.751953Z"
+     "start_time": "2023-05-22T00:12:45.817273Z",
+     "end_time": "2023-05-22T00:12:45.993471Z"
     }
    }
   },
@@ -362,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "[impacts - 18 children ]"
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,20 +378,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:17.107961Z",
-     "end_time": "2023-05-21T23:47:17.148498Z"
+     "start_time": "2023-05-22T00:12:45.836384Z",
+     "end_time": "2023-05-22T00:12:45.994670Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "([terrestrial acidification potential (TAP) - 2 children (impacts)],\n [[Onsite - 2 children (terrestrial acidification potential (TAP))],\n  [Offsite - 2 children (terrestrial acidification potential (TAP))]])"
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,20 +403,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:18.077067Z",
-     "end_time": "2023-05-21T23:47:18.135624Z"
+     "start_time": "2023-05-22T00:12:45.861916Z",
+     "end_time": "2023-05-22T00:12:46.173641Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "([Onsite - 2 children (terrestrial acidification potential (TAP))],\n ['renewables', 'non-renewables'])"
      },
-     "execution_count": 61,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,14 +428,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:18.934927Z",
-     "end_time": "2023-05-21T23:47:18.979996Z"
+     "start_time": "2023-05-22T00:12:45.905237Z",
+     "end_time": "2023-05-22T00:12:46.174642Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# now we fill up all indicator sub-trees going row by row. finding the respective technology node for onsite and offsite and filling in the value\n",
@@ -464,14 +463,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:20.724231Z",
-     "end_time": "2023-05-21T23:47:20.821787Z"
+     "start_time": "2023-05-22T00:12:45.953096Z",
+     "end_time": "2023-05-22T00:12:46.176482Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "for indicator_subtree in root.children:\n",
@@ -480,14 +479,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:21.588946Z",
-     "end_time": "2023-05-21T23:47:21.617315Z"
+     "start_time": "2023-05-22T00:12:46.028543Z",
+     "end_time": "2023-05-22T00:12:46.177511Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "import json\n",
@@ -496,14 +495,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:22.202478Z",
-     "end_time": "2023-05-21T23:47:22.258886Z"
+     "start_time": "2023-05-22T00:12:46.057155Z",
+     "end_time": "2023-05-22T00:12:46.253030Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "root.to_csv((base_path / \"complete.csv\"))"
@@ -511,38 +510,45 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:47:23.098415Z",
-     "end_time": "2023-05-21T23:47:23.148264Z"
+     "start_time": "2023-05-22T00:12:46.150643Z",
+     "end_time": "2023-05-22T00:12:46.282246Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "outputs": [],
    "source": [
+    "from enbios2.generic.util import safe_name\n",
+    "\n",
     "# one sanky csv file per indicator.\n",
     "# ! these hierarchies do not have unique names (same subtree in Onsite/Offsite), so we need to make them unique before we can write them to csv\n",
     "(base_path / \"sanky\").mkdir(exist_ok=True)\n",
     "for indicator_subtree in root.children:\n",
     "    indicator_subtree.make_names_unique()\n",
-    "    indicator_subtree.to_sanky_tree(base_path / \"sanky\" / f\"{indicator_subtree.name}_sanky.csv\")"
+    "    indicator_subtree.to_sanky_tree(base_path / \"sanky\" /\n",
+    "                                    f\"{safe_name(indicator_subtree.name)}_sanky.csv\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-21T23:50:16.761675Z",
-     "end_time": "2023-05-21T23:50:16.941888Z"
+     "start_time": "2023-05-22T00:17:59.795265Z",
+     "end_time": "2023-05-22T00:17:59.952714Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-22T00:12:46.280853Z",
+     "end_time": "2023-05-22T00:12:46.443968Z"
+    }
    }
   }
  ],
